--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/framework": "^6.2",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^6.0",
-        "maatwebsite/excel": "^3.1"
+        "maatwebsite/excel": "^3.1",
+        "propaganistas/laravel-phone": "^4.2"
     },
     "require-dev": {
 
