--- a/composer.json
+++ b/composer.json
@@ -44,6 +44,9 @@
         }
     },
     "autoload": {
+        "files": [
+            "app/Helpers/recipe.php"
+        ],
         "psr-4": {
             "App\\": "app/"
         },
