--- a/.env
+++ b/.env
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=data_testv3
+DB_DATABASE=mmc
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=admin@localhost1
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
